rutas absolutas modificadas

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "scripts": {
     "dev": "parcel serve src/index.html",
-    "build": "parcel build ./src/index.html --dist-dir build",
-    "deploy": "gh-pages -d dist"
+    "build": "parcel build ./src/index.html --dist-dir build --public-url /dwf-m5-desafio",
+    "deploy": "gh-pages -d build"
   }
 }
