package.json scripts fixed

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "parcel": "^2.0.0-rc.0"
   },
   "scripts": {
-    "dev": "parcel serve src/index.html",
+    "dev": "parcel serve ./src/index.html",
     "build": "parcel build ./src/index.html --dist-dir build --public-url /dwf-m5-desafio",
     "deploy": "gh-pages -d build"
   }
